GNOME Bugzilla – Bug 689392
swipe-action: Introduce new ::swipe signal
Last modified: 2012-12-18 02:10:43 UTC
As suggested by the Emmanueles on IRC.
Created attachment 230357 [details] [review] swipe-action: Introduce new ::swipe signal This deprecates the old ::swept signal, which didn't have a handled boolean parameter.
Review of attachment 230357 [details] [review]: ::: clutter/clutter-swipe-action.c @@ +191,3 @@ * attached actor. * + * Deprecated: 1.14: Use the ::swipe signal instead. you also need to add G_SIGNAL_DEPRECATED to the signal flags, so that connecting to the signal (while using G_ENABLE_DIAGNOSTIC) will raise a warning. @@ +215,3 @@ + * attached actor. + * + * Return value: %TRUE if the pan should continue, and %FALSE if typo: swipe. ::: clutter/clutter-swipe-action.h @@ +90,2 @@ /*< private >*/ void (* _clutter_swipe_action1) (void); you need to remove a padding slot to preserve ABI.
Created attachment 230462 [details] [review] swipe-action: Introduce new ::swipe signal This deprecates the old ::swept signal, which didn't have a handled boolean parameter.
Attachment 230462 [details] pushed as 184b8c6 - swipe-action: Introduce new ::swipe signal
gah, pushed accidentally. reverted.
Review of attachment 230462 [details] [review]: looks good.
*** Bug 689313 has been marked as a duplicate of this bug. ***
pushed to master, along with the ClutterSwipeActionClass.swipe member docs, given that gtk-doc complained during distcheck.