clutter/clutter-swipe-action.c
@@ -59,6 +59,7 @@ struct _ClutterSwipeActionPrivate
 enum
 {
   SWEPT,
+  SWIPE,
 
   LAST_SIGNAL
 };
@@ -141,6 +142,7 @@ gesture_end (ClutterGestureAction *action,
   gfloat press_x, press_y;
   gfloat release_x, release_y;
   ClutterSwipeDirection direction = 0;
+  gboolean can_emit_swipe;
 
   clutter_gesture_action_get_press_coords (action,
                                            0,
@@ -160,7 +162,11 @@ gesture_end (ClutterGestureAction *action,
   else if (press_y - release_y > priv->threshold)
     direction |= CLUTTER_SWIPE_DIRECTION_UP;
 
-  g_signal_emit (action, swipe_signals[SWEPT], 0, actor, direction);
+  /* XXX:2.0 remove */
+  g_signal_emit (action, swipe_signals[SWIPE], 0, actor, direction,
+                 &can_emit_swipe);
+  if (can_emit_swipe)
+    g_signal_emit (action, swipe_signals[SWEPT], 0, actor, direction);
 }
 
 static void
@@ -184,16 +190,44 @@ clutter_swipe_action_class_init (ClutterSwipeActionClass *klass)
    * The ::swept signal is emitted when a swipe gesture is recognized on the
    * attached actor.
    *
+   * Deprecated: 1.14: Use the ::swipe signal instead.
+   *
    * Since: 1.8
    */
   swipe_signals[SWEPT] =
     g_signal_new (I_("swept"),
                   G_TYPE_FROM_CLASS (klass),
-                  G_SIGNAL_RUN_LAST,
+                  G_SIGNAL_RUN_LAST |
+                  G_SIGNAL_DEPRECATED,
                   G_STRUCT_OFFSET (ClutterSwipeActionClass, swept),
                   NULL, NULL,
                   _clutter_marshal_VOID__OBJECT_FLAGS,
                   G_TYPE_NONE, 2,
+                  CLUTTER_TYPE_ACTOR,
+                  CLUTTER_TYPE_SWIPE_DIRECTION);
+
+  /**
+   * ClutterSwipeAction::swipe:
+   * @action: the #ClutterSwipeAction that emitted the signal
+   * @actor: the #ClutterActor attached to the @action
+   * @direction: the main direction of the swipe gesture
+   *
+   * The ::swipe signal is emitted when a swipe gesture is recognized on the
+   * attached actor.
+   *
+   * Return value: %TRUE if the swipe should continue, and %FALSE if
+   *   the swipe should be cancelled.
+   *
+   * Since: 1.14
+   */
+  swipe_signals[SWIPE] =
+    g_signal_new (I_("swipe"),
+                  G_TYPE_FROM_CLASS (klass),
+                  G_SIGNAL_RUN_LAST,
+                  G_STRUCT_OFFSET (ClutterSwipeActionClass, swipe),
+                  _clutter_boolean_continue_accumulator, NULL,
+                  _clutter_marshal_BOOLEAN__OBJECT_FLAGS,
+                  G_TYPE_BOOLEAN, 2,
                   CLUTTER_TYPE_ACTOR,
                   CLUTTER_TYPE_SWIPE_DIRECTION);
 }
