clutter/clutter-swipe-action.h
@@ -66,7 +66,9 @@ struct _ClutterSwipeAction
 
 /**
  * ClutterSwipeActionClass:
- * @swept: class handler for the #ClutterSwipeAction::swept signal
+ * @swept: class handler for the #ClutterSwipeAction::swept signal;
+ *   deprecated since 1.14
+ * @swipe: class handler for the #ClutterSwipeAction::swipe signal
  *
  * The <structname>ClutterSwipeActionClass</structname> structure contains
  * only private data.
@@ -83,6 +85,10 @@ struct _ClutterSwipeActionClass
                    ClutterActor          *actor,
                    ClutterSwipeDirection  direction);
 
+  gboolean (* swipe) (ClutterSwipeAction    *action,
+                      ClutterActor          *actor,
+                      ClutterSwipeDirection  direction);
+
   /*< private >*/
   void (* _clutter_swipe_action1) (void);
   void (* _clutter_swipe_action2) (void);
@@ -90,7 +96,6 @@ struct _ClutterSwipeActionClass
   void (* _clutter_swipe_action4) (void);
   void (* _clutter_swipe_action5) (void);
   void (* _clutter_swipe_action6) (void);
-  void (* _clutter_swipe_action7) (void);
 };
 
 GType clutter_swipe_action_get_type (void) G_GNUC_CONST;
